--- a/src/main/resources/templates/peminjaman/form.html
+++ b/src/main/resources/templates/peminjaman/form.html
@@ -39,6 +39,7 @@
                         <!-- /.card-header -->
                         <form role="form" method="post" th:action="@{/}" th:object="${data}">
                             <div class="card-body">
+                                <div class="error" ></div>
                                 <input th:field="*{id}" type="hidden" >
                                 <div class="form-group">
                                     <label for="pelanggan">Pelanggan : </label>
@@ -46,9 +47,10 @@
                                         <option value="" style="display: none;">-- Select --</option>
                                         <option data-tokens="" th:each="dPelanggan : ${dataPelanggan}" th:value="${dPelanggan.id}" th:text="${dPelanggan.nama}"></option>
                                     </select>
-                                    <div id="errorTxt" class="cErr0" style="color: red">
-                                        <span id="err0"></span>
-                                    </div>
+                                    <p th:if="${#fields.hasErrors('pelanggan')}" th:errors="*{pelanggan}"></p>
+<!--                                    <div id="errorTxt" class="cErr0" style="color: red">-->
+<!--                                        <span id="err0"></span>-->
+<!--                                    </div>-->
                                 </div>
                                 <div class="form-group">
                                     <label for="dvd">judul Film : </label>
@@ -56,15 +58,18 @@
                                         <option value="" style="display: none;">-- Select --</option>
                                         <option data-tokens="" th:each="dDvd : ${dataDvd}" th:value="${dDvd.id}" th:text="${dDvd.judulFilm}"></option>
                                     </select>
-                                    <div id="errorTxt" class="cErr0" style="color: red">
-                                        <span id="err0"></span>
-                                    </div>
+                                    <p th:if="${#fields.hasErrors('dvd')}" th:errors="*{dvd}"></p>
+<!--                                    <div id="errorTxt" class="cErr0" style="color: red">-->
+<!--                                        <span id="err0"></span>-->
+<!--                                    </div>-->
                                 </div>
                                 <div class="form-group">
                                     <label for="tanggal">Tanggal Pinjam</label>
                                     <input class="form-control" id="tanggal" placeholder="Tanggal Pinjam"
                                            type="datetime-local" th:field="*{tanggalPeminjaman}" required>
+                                    <p th:if="${#fields.hasErrors('tanggalPeminjaman')}" th:errors="*{tanggalPeminjaman}"></p>
                                 </div>
+
 
                             </div>
                             <!-- /.card-body -->
