--- a/src/main/resources/templates/peminjaman/form.html
+++ b/src/main/resources/templates/peminjaman/form.html
@@ -54,20 +54,20 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="dvd">judul Film : </label>
-                                    <select id="dvd" data-error="#err0" name="dvd" class="form-control selectpicker" data-live-search="true" required th:field="*{dvd}">
+                                    <select id="dvd" data-error="#err0" name="dvd" class="form-control selectpicker" data-live-search="true" required  th:field="*{dvd}">
                                         <option value="" style="display: none;">-- Select --</option>
                                         <option data-tokens="" th:each="dDvd : ${dataDvd}" th:value="${dDvd.id}" th:text="${dDvd.judulFilm}"></option>
                                     </select>
-                                    <p th:if="${#fields.hasErrors('dvd')}" th:errors="*{dvd}"></p>
+                                    <p th:if="${#fields.hasErrors('dvd')}" th:errors="*{dvd}">error</p>
 <!--                                    <div id="errorTxt" class="cErr0" style="color: red">-->
 <!--                                        <span id="err0"></span>-->
 <!--                                    </div>-->
                                 </div>
                                 <div class="form-group">
                                     <label for="tanggal">Tanggal Pinjam</label>
-                                    <input class="form-control" id="tanggal" placeholder="Tanggal Pinjam"
-                                           type="datetime-local" th:field="*{tanggalPeminjaman}" required>
-                                    <p th:if="${#fields.hasErrors('tanggalPeminjaman')}" th:errors="*{tanggalPeminjaman}"></p>
+                                    <input class="form-control" id="tanggal" placeholder="Tanggal Pinjam" required
+                                           type="datetime-local" th:field="*{tanggalPeminjaman}" >
+                                    <p th:if="${#fields.hasErrors('tanggalPeminjaman')}" th:errors="*{tanggalPeminjaman}">error</p>
                                 </div>
 
 
